# ot_harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
KorttiKube/: .coverage
KorttiKube/dokumentaatio/: tyoaikakirjanpito.md  vaatimusmaarittely.md
KorttiKube/htmlcov/: index.html  src_entities_card_creature_py.html  src_entities_card_py.html  status.json
KorttiKube/src/: config.py  database.db  database_connection.py  index.py  initialise_database.py
KorttiKube/src/entities/: card.py  card_creature.py  card_enchantment.py  card_enchantment_creature.py  card_instant.py  card_land.py  card_planeswalker.py  cube.py
KorttiKube/src/repositories/: card_repository.py  cube_repository.py  user_repository.py
KorttiKube/src/services/: korttikube_service.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/: README.md
laskarit/viikko1/: gitlog.txt
src/: config.py  database_20.db  database_connection.py  index.py  initialise_database.py
src/entities/: card.py  card_artifact.py  card_artifact_creature.py  card_creature.py  card_enchantment.py  card_enchantment_creature.py  card_instant.py  card_land.py  card_planeswalker.py  card_sorcery.py  cube.py  game.py  user.py
src/repositories/: card_repository.py  cube_repository.py  user_repository.py
src/services/: korttikube_service.py
src/tests/: conftest.py
src/ui/: card_image.py  card_view.py  create_user_view.py  cube_view.py  edit_card_view.py  game_view.py  login_view.py  main_view.py  statistics_view.py  ui.py  window.py
(+122 files in other folders)
